tests/negative/import_private_call.far
import fixtures.exp_b { visible }

fun main() -> i64 {
  return hidden()
}
